Fixed css white space error

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Open Sans,Arial,sans-serif;
+	font-family: "Open Sans",Arial,sans-serif;
 	background-color: #0099ff;
 }
 
